k8s/mailhog/mailhog-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mailhog
  namespace: default
spec:
  selector:
    app: mailhog
  ports:
    - name: smtp
      protocol: TCP
      port: 1025
      targetPort: 1025
    - name: webui
      protocol: TCP
      port: 8025
      targetPort: 8025
